--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
     implementation platform('org.jetbrains.kotlin:kotlin-bom')
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
+    testImplementation 'io.kotest:kotest-runner-junit5:5.4.2'
+    testImplementation 'io.kotest:kotest-assertions-core:5.4.2'
+    testImplementation 'io.kotest:kotest-property:5.4.2'
+    testImplementation 'io.kotest:kotest-framework-datatest:5.4.2'
 }
 
 test {
