--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testImplementation 'io.kotest:kotest-assertions-core:5.4.2'
     testImplementation 'io.kotest:kotest-property:5.4.2'
     testImplementation 'io.kotest:kotest-framework-datatest:5.4.2'
+    testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
 }
 
 test {
